# rcsw

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yml  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: build-and-test.yml  ci.yml  pages.yml
cmake/: baremetal.cmake  bootstrap.cmake  collect.cmake  config.cmake.in  core.cmake  posix.cmake  project-local.cmake
docs/: Doxyfile.in  Makefile  conf.py  index.rst  modules.rst  requirements.txt
docs/src/: algorithm.rst  ds.rst  er.rst  modules.rst  multiprocess.rst  multithread.rst  pulse.rst  startup.rst  stdio.rst  utils.rst
include/rcsw/: doxygen.h  rcsw.h
scripts/: bootstrap.sh  doxy_prepare.sh
src/adapter/: simple_image.c
src/ds/: allocm.c  (+31 more)
tests/: Doxyfile  alg-dynprog-utest.cpp  alg-paren-utest.cpp  alg-search-utest.cpp  alg-sort-utest.cpp  algorithm-utest.cpp  boot-utest.cpp  core-fpc-utest.cpp  ds-adj_matrix-utest.cpp  ds-adjmatrix-utest.cpp  ds-bstree-utest.cpp  ds-darray-utest.cpp  ds-dyn_matrix-utest.cpp  ds-dynamic_matrix-utest.cpp  ds-dynmatrix-utest.cpp  ds-fifo-utest.cpp  ds-hashmap-utest.cpp  ds-heap-utest.cpp  ds-inttree-utest.cpp  ds-llist-utest.cpp  ds-matrix-utest.cpp  ds-multififo-utest.cpp  ds-ostree-utest.cpp  ds-rbuffer-utest.cpp  ds-static_matrix-utest.cpp  ds_bstree_test.cpp  ds_bstree_test.hpp  ds_test.c  ds_test.cpp  ds_test.h  ds_test.hpp  element.h  element.hpp  io_redirector.hpp  mt-mpool-utest.cpp  mt-pcqueue-utest.cpp  mt-rdwrl-utest.cpp  pulse-feature-utest.cpp  pulse-utest.cpp  pulse_test.h  (+10 more)
(+231 files in other folders)
